Closed
Bug 200480
Opened 22 years ago
Closed 22 years ago
Cutting a bookmark folder deletes its contents
Categories
(Firefox :: Bookmarks & History, defect)
Tracking
()
VERIFIED
FIXED
Firebird0.6
People
(Reporter: huskerdu, Assigned: p_ch)
References
Details
(Keywords: dataloss)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030402 Phoenix/0.5
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030402 Phoenix/0.5
In the bookmark manager or toolbar, cutting a folder of bookmarks will delete the contents. Pasting will only paste the folder itself, empty.
Reproducible: Always
Steps to Reproduce:
1. In either the Bookmark Manager or Toolbar, cut a bookmark folder with either ^X or the context menu
2. Paste the folder
Actual Results:
The folder pastes, but empty. All bookmarks have been deleted.
Expected Results:
Pasted the folder with all the original bookmarks.
Comment 1•22 years ago
|
||
Confirming.
Mozilla/5.0 (Windows NT 5.0; en-US; rv:1.4a) Gecko/20030402 Phoenix/0.5
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•22 years ago
|
||
*** Bug 202229 has been marked as a duplicate of this bug. ***
Comment 3•22 years ago
|
||
This also applies to _copying_ and pasting a folder:
The folder pastes, but empty.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030408 Phoenix/0.5+
Comment 4•22 years ago
|
||
This one should really be targetted to 0.6.
OS: Windows XP → All
Target Milestone: --- → Phoenix0.6
Comment 5•22 years ago
|
||
Works for me with both copying & pasting. After paste, the folder retains all
bookmarks inside the folder.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030320 Phoenix/0.5
Comment 6•22 years ago
|
||
Sorry, I meant both cutting & copying. In both cases, pasting retains all
bookmarks.
Mike, could you try a newer build? Thanks. It seems reporters are using April ones.
Comment 8•22 years ago
|
||
New behaviour in the latest nightly:
1. CUTTING a folder does not work any more. Nothing happens, the folder is still
there. When pasting after cutting a folder, nothing happens as well. At least,
there is no dataloss this way.
2. COPYING a folder and then pasting does not result in a new (but empty!)
folder any more. Now it pastes something like a link-less bookmark, named like
the folder.
This line is added to the bookmark file:
<DT><A HREF="" ADD_DATE="1051044404" LAST_CHARSET="UTF-8" ID="rdf:#$oDquE3">test</A>
But the folder started like this:
<DT><H3 ADD_DATE="1051044252" LAST_MODIFIED="1051044397" ID="rdf:#$mDquE3">test</H3>
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030422
Firebird™ Browser/0.6
Comment 9•22 years ago
|
||
In request with Comment #7, absolutely reproducible with an April build.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030411 Phoenix/0.5+
Looks like it's been broken since the beginning of April. Anyone know what the
last build that this worked in was?
Comment 10•22 years ago
|
||
Using the 4/11 build, here is the JS error generated when cutting a bookmark folder:
Error: uncaught exception: [Exception... "Component returned failure code:
0x80070057 (NS_ERROR_ILLEGAL_VALUE) [nsIRDFService.GetResource]" nsresult:
"0x80070057 (NS_ERROR_ILLEGAL_VALUE)" location: "JS frame ::
chrome://browser/content/bookmarks/bookmarks.js :: anonymous :: line 1586"
data: no]
Comment 11•22 years ago
|
||
Using the 4/20 build when dragging folder A into Folde B all of Folder A's links
are blanked out. Seems related though may be a different bug.
Comment 12•22 years ago
|
||
Chris,
this works for me.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030422
Firebird™ Browser/0.6
| Assignee | ||
Comment 13•22 years ago
|
||
*** Bug 203085 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 14•22 years ago
|
||
marking fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 15•22 years ago
|
||
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/browser/components/bookmarks/content&command=DIFF_FRAMESET&file=bookmarks.js&rev1=1.47&rev2=1.48&root=/cvsroot
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/browser/components/bookmarks/content&command=DIFF_FRAMESET&file=bookmarksMenu.js&rev1=1.9&rev2=1.10&root=/cvsroot
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/browser/components/bookmarks/content&command=DIFF_FRAMESET&file=bookmarksTree.xml&rev1=1.40&rev2=1.41&root=/cvsroot
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/browser/components/bookmarks/public&command=DIFF_FRAMESET&file=nsIBookmarksService.idl&rev1=1.4&rev2=1.5&root=/cvsroot
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/browser/components/bookmarks/src&command=DIFF_FRAMESET&file=nsBookmarksService.cpp&rev1=1.8&rev2=1.9&root=/cvsroot
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/browser/components/bookmarks/src&command=DIFF_FRAMESET&file=nsBookmarksService.h&rev1=1.5&rev2=1.6&root=/cvsroot
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/browser/components/bookmarks/content&command=DIFF_FRAMESET&file=bookmarks.js&rev1=1.48&rev2=1.49&root=/cvsroot
v.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•