bug 200480: cut/paste doesn't work on folders and separators